MVP for Desktop Completed

--- a/less/footer.less
+++ b/less/footer.less
@@ -1,7 +1,8 @@
 .footer {
-  width: 100%;
+  width: 1000px;
   border-top: 2px dashed silver;
   background: @sandy-beach;
+  margin: 0 auto;
   
   p {
     text-align: center;
