--- a/css/index.css
+++ b/css/index.css
@@ -168,16 +168,46 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+nav {
+  margin: 0 auto;
+  width: 1000px;
+  height: 90px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px dashed gray;
+  padding: 0 5%;
+}
+nav .nav-links {
+  display: flex;
+  width: 40%;
+  margin-right: 5%;
+}
+nav a {
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: black;
+  padding-left: 10%;
+}
+nav a:hover {
+  text-decoration: underline;
+  transition: 0.2s;
+}
 .footer {
-  width: 100%;
+  width: 1000px;
   border-top: 2px dashed silver;
   background: #FFEBCD;
+  margin: 0 auto;
 }
 .footer p {
   text-align: center;
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home header {
+  padding: 20px 2.5% 15px 0;
+  border-bottom: 2px dashed gray;
 }
 .home .content-section {
   margin: 30px 0;
@@ -224,4 +254,13 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .destination .btn {
+  font-size: 2rem;
+  border-radius: 10px;
+  padding: 10px 5%;
+  text-align: center;
+  width: 80%;
+  color: white;
+  background: teal;
 }
