--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,12 +1,17 @@
 .home {
 
+  header {
+    padding: 20px 2.5% 15px 0;
+    border-bottom: 2px dashed gray;
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
+    
     
     .text-content {
       width: 48%;
@@ -56,6 +61,11 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn{
+        .button(white, teal)
+      }
+
     }
   }
 }// home
