--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,11 @@
 // Mixins in here
+
+.button (@textcolor, @backgroundcolor) {
+    font-size: 2rem;
+    border-radius: 10px;
+    padding: 10px 5%;
+    text-align: center;
+    width: 80%;
+    color: @textcolor;
+    background: @backgroundcolor;
+}
