--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,30 @@
 // Navigation Styles here
+
+nav {
+    margin: 0 auto;
+    width: 1000px;
+    height: 90px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px dashed gray;
+    padding: 0 5%;
+
+    .nav-links{
+        display: flex;
+        width: 40%;
+        margin-right: 5%;
+    }
+
+    a {
+        text-decoration: none;
+        font-size: 1.5rem;
+        color: black;
+        padding-left: 10%;
+
+        &:hover{
+            text-decoration: underline;
+            transition: .2s;
+        }
+    }
+}
