--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,19 +11,40 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+      @media @mobile {
+        flex-direction: column;
+        
+      }
+
     
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width: 100%;
+        line-height: 1.2;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
 
+      @media @mobile {
+        width: 100%;
+        padding-left: 2%;
+        
+      }
+
       img {
         border-radius: 10px;
+        
+        @media @mobile {
+          width: 450px;
+          height: 350px;
+        }
       }
     }
   }
@@ -31,6 +52,10 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+
+    @media @mobile {
+      flex-direction: column-reverse;
+    }
 
     .text-content {
       padding-left: 1%;
@@ -47,6 +72,10 @@
     width: 75%;
     margin: 0 auto 30px;
 
+      @media @mobile {
+        width: 100%;
+      }
+
     img {
       border-radius: 10px;
     }
@@ -58,14 +87,24 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      flex-flow: column wrap;
+      justify-content: center;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
 
+      @media @mobile {
+        width: 90%;
+        padding-left:10%;
+        text-align: left;
+      }
+
       .btn{
         .button(white, teal)
       }
-
     }
   }
 }// home
