--- a/less/footer.less
+++ b/less/footer.less
@@ -3,6 +3,10 @@
   border-top: 2px dashed silver;
   background: @sandy-beach;
   margin: 0 auto;
+
+  @media @mobile {
+    max-width: 500px;
+  }
   
   p {
     text-align: center;
